<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sell_activity_layout"
    tools:context=".SellActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_sell"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sansregular"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:text="@string/sell_a_game"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addImageSell"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/add_game_description"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_sell">

            <ImageView
                android:id="@+id/add_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/add_image_button_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_icon"
                android:fontFamily="@font/sansregular"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/game_name_et"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/game_name"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImageSell"/>

        <EditText
            android:id="@+id/game_price_et"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/price"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_name_et"/>

        <RadioGroup
            android:id="@+id/game_console_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/radio_console_sell_description"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/game_price_et">

            <RadioButton
                android:id="@+id/pc_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pc_text_description"
                android:padding="8dp"
                android:text="@string/pc"
                android:textColor="@color/colorPrimaryText" />

            <RadioButton
                android:id="@+id/ps4_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/ps4_text_description"
                android:padding="8dp"
                android:text="@string/ps4"
                android:textColor="@color/colorPrimaryText" />

            <RadioButton
                android:id="@+id/xbox_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/xbox_text_description"
                android:padding="8dp"
                android:text="@string/xbox_one"
                android:textColor="@color/colorPrimaryText" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/game_condition_sell_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:contentDescription="@string/radio_condition_sell_description"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/game_console_radio_group">

            <RadioButton
                android:id="@+id/new_sell_radio"
                android:layout_width="wrap_content"
                android:contentDescription="@string/new_text_description"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/new_text"
                android:textColor="@color/colorPrimaryText" />

            <RadioButton
                android:id="@+id/used_sell_radio"
                android:contentDescription="@string/used_text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/used"
                android:textColor="@color/colorPrimaryText" />

        </RadioGroup>

        <Button
            android:id="@+id/publish_game_btn"
            android:layout_width="0dp"
            android:contentDescription="@string/sell_btn_description"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/game_condition_sell_radio_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sell_now"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/sansregular"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_accent_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

