<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background">


    <TextView
        android:id="@+id/dialog_picker_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/sansregular"
        android:padding="16dp"
        android:text="@string/dialog_image_picler_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_picker_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansregular"
        android:padding="16dp"
        android:contentDescription="@string/pick_image_from_gallery"
        android:text="@string/dilaog_picker_gallery_option"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_picker_title" />

    <View
        android:id="@+id/dialog_seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_picker_gallery" />

    <TextView
        android:id="@+id/dialog_picker_Camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sansregular"
        android:contentDescription="@string/pick_image_from_camera"
        android:padding="16dp"
        android:text="@string/dialog_picker_camera_option"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_seperator" />
</androidx.constraintlayout.widget.ConstraintLayout>